Prevent text from wrapping within dropdowns and tooltips

--- a/styles/pup/components/_tooltip.scss
+++ b/styles/pup/components/_tooltip.scss
@@ -42,6 +42,7 @@ $tooltip-triangle-size: 10px;
     position: absolute;
     top: 100%;
     transform: translateX(-50%);
+    white-space: pre;
   }
 
   &:hover {
